// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="components-aspect-ratio wp-components-aspect-ratio css-fvkpkj"
  data-g2-c16t="true"
  data-g2-component="AspectRatio"
>
  <img
    alt="Snow"
    class="css-9zw39p"
  />
  <div
    aria-hidden="true"
    class="css-v1plal"
  />
</div>
`;

exports[`props should render with custom ratio 1`] = `
<div
  class="components-aspect-ratio wp-components-aspect-ratio css-fvkpkj"
  data-g2-c16t="true"
  data-g2-component="AspectRatio"
>
  <img
    alt="Snow"
    class="css-9zw39p"
  />
  <div
    aria-hidden="true"
    class="css-19nlqcr"
  />
</div>
`;

exports[`props should render with custom width 1`] = `
<div
  class="components-aspect-ratio wp-components-aspect-ratio css-47u31x"
  data-g2-c16t="true"
  data-g2-component="AspectRatio"
>
  <img
    alt="Snow"
    class="css-9zw39p"
  />
  <div
    aria-hidden="true"
    class="css-tw80lk"
  />
</div>
`;
